style(theme): mise à jour du theme sombre des couleurs primary et secondary dans les variables feat(animations): ajout reveal et l'effet text scramble dans l'horizontal scroll fix(ui): Correction de la position du bandeau

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -7,7 +7,8 @@ header {
     top: 0;
     z-index: var(--z-header);
     height: 80px;
-    background-color: var(--bg-secondary);
+    background-color: color-mix(in srgb, var(--bg-secondary) 30%, transparent);
+    backdrop-filter: blur(8px);
 }
 
 .header-container {
